changed scrollbar and fixed css

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,14 @@
     scroll-behavior: smooth;
     font-family: "Figtree";
 }
+
+::-webkit-scrollbar {
+    width: 16px;
+    background: #aaaaaa89;
+}
+
+::-webkit-scrollbar-thumb {
+    background: gray;
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
